Updated the deathscreen: - Deathscreen now has a unique font - Deathscreen is now transparent on both crash and 0 fuel